@@ -52,21 +52,9 @@ AC_COMPILE_CHECK([F_SETOWN],
 #include <fcntl.h>],
 [1+F_SETOWN;], 
 AC_DEFINE(HAVE_SETOWN))
-AC_COMPILE_CHECK([ut_host in struct utmp],
-[#include <utmp.h>],
-[struct utmp ut; ut.ut_host;],
-,
-AC_DEFINE(NO_UT_HOST))
-AC_COMPILE_CHECK([ut_exit in struct utmp],
-[#include <utmp.h>],
-[struct utmp ut; ut.ut_exit;],
-,
-AC_DEFINE(NO_UT_EXIT))
-AC_COMPILE_CHECK([ut_pid in struct utmp],
-[#include <utmp.h>],
-[struct utmp ut; ut.ut_pid;],
-,
-AC_DEFINE(NO_UT_PID))
+KRB5_UTHOST
+KRB5_UTEXIT
+KRB5_UTPID
 KRB_INCLUDE
 WITH_KRB5ROOT
 WITH_KRB4
